--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
 </div>
 <div>
-<a href="https://tssuolo.github.io/-slot/index.html">
+<a href="https://tssuolo.github.io/slot/index.html">
 <div class="feature-card glass" style="background-image: url('images/olim.gif');"></div>
 </a>
 <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
