--- a/live/index.html
+++ b/live/index.html
@@ -109,13 +109,13 @@
   <!-- 홈 3개 -->
   <section class="features first-features" id="homeSection">
     <div>
-      <a href="https://www.youtube.com/live/NZIIN2Pr0bk?si=QrRuHRQW7idDnwlv" target="_blank">
+      <a href="https://tssuolo.github.io/slot/live/index.html" target="_blank">
         <div class="feature-card glass" style="background-image: url('./images/spinning-youtube.gif');"></div>
       </a>
       <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
     </div>
     <div>
-      <a href="../index.html">
+      <a href="https://tssuolo.github.io/slot/index.html">
         <div class="feature-card glass" style="background-image: url('./images/olim.gif');"></div>
       </a>
       <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
