--- a/live/index.html
+++ b/live/index.html
@@ -58,7 +58,7 @@
       .player-sticky iframe {
         width: 100%;
         height: 100%;
-        transform: translate(-10%, -5%);
+        transform: none;
         border-radius: 0;
       }
     }
