--- a/live/index.html
+++ b/live/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>무료슬롯 - 최신 온라인 슬롯 게임 모음</title>
-
   <link href="./templatemo-glossy-touch.css" rel="stylesheet"/>
 
   <style>
-    /* 홈 박스 */
+    /* 홈 3박스 */
     .features {
       display: grid;
-      grid-template-columns: repeat(3, 1fr) !important;
+      grid-template-columns: repeat(3, 1fr);
       gap: 10px;
       max-width: 1300px;
       margin: 30px auto;
@@ -25,17 +24,22 @@
       background-position: center;
     }
 
+    /* 홈+방송 묶음 */
+    .home-broadcast-wrapper {
+      position: relative;
+    }
+
     /* 방송 박스 */
     .player-sticky {
-      width: 50%;
+      width: 100%;
       max-width: 1300px;
       margin: 10px auto;
       aspect-ratio: 16/9;
       position: sticky;
-      top: 0;
+      top: 0; /* ✅ 홈박스 끝난 뒤부터 고정됨 */
       background: #000;
       border-radius: 12px;
-      z-index: 100;
+      z-index: 3000; /* 항상 채팅보다 위 */
     }
     .player-sticky iframe {
       width: 100%;
@@ -54,13 +58,13 @@
       flex-direction: column;
       height: 400px;
       transition: all 0.3s ease;
+      z-index: 2000; /* 방송보다 아래 */
     }
     #chat-messages {
       flex: 1;
       overflow-y: auto;
       padding: 8px;
       color: white;
-      font-size: 16px;
     }
     #chat-input-area {
       display: flex;
@@ -88,31 +92,34 @@
 </head>
 <body>
 
-  <!-- 홈 박스 3개 -->
-  <section class="features first-features" id="homeSection">
-    <div>
-      <a href="https://tssuolo.github.io/slot/live/index.html">
-        <div class="feature-card" style="background-image: url('./images/spinning-youtube.gif');"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
-    </div>
-    <div>
-      <a href="https://tssuolo.github.io/slot/index.html">
-        <div class="feature-card" style="background-image: url('./images/olim.gif');"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
-    </div>
-    <div>
-      <a href="https://t.me/ARSLOT7" target="_blank">
-        <div class="feature-card" style="background-image: url('./images/tltl.gif'); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">가다호출</div>
-    </div>
-  </section>
+  <!-- 홈 + 방송 묶음 -->
+  <div class="home-broadcast-wrapper">
+    <!-- 홈 박스 3개 -->
+    <section class="features first-features" id="homeSection">
+      <div>
+        <a href="https://tssuolo.github.io/slot/live/index.html">
+          <div class="feature-card" style="background-image: url('./images/spinning-youtube.gif');"></div>
+        </a>
+        <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
+      </div>
+      <div>
+        <a href="https://tssuolo.github.io/slot/index.html">
+          <div class="feature-card" style="background-image: url('./images/olim.gif');"></div>
+        </a>
+        <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
+      </div>
+      <div>
+        <a href="https://t.me/ARSLOT7" target="_blank">
+          <div class="feature-card" style="background-image: url('./images/tltl.gif'); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
+        </a>
+        <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">가다호출</div>
+      </div>
+    </section>
 
-  <!-- 방송 -->
-  <div class="player-sticky">
-    <iframe src="https://player.kick.com/3333slot?muted=true&autoplay=true" allowfullscreen></iframe>
+    <!-- 방송 -->
+    <div class="player-sticky">
+      <iframe src="https://player.kick.com/3333slot?muted=true&autoplay=true" allowfullscreen></iframe>
+    </div>
   </div>
 
   <!-- 채팅 -->
@@ -124,6 +131,7 @@
     </div>
   </div>
 
+  <!-- JS: Firebase + 채팅 입력 로직 + 모바일 대응 -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
@@ -169,7 +177,6 @@
       msgBox.scrollTop = msgBox.scrollHeight;
     });
 
-    // 엔터로 전송
     document.getElementById("chat-input").addEventListener("keydown", function(e) {
       if (e.key === "Enter" && !e.shiftKey) {
         e.preventDefault();
@@ -177,7 +184,7 @@
       }
     });
 
-    // ✅ 모바일 전용: 채팅 박스 전체가 방송 밑으로 올라가고 입력창은 키보드 위
+    // ✅ 모바일에서만 채팅창 고정 이동 처리
     function isMobile() {
       return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
     }
@@ -192,7 +199,6 @@
 
       chatInput.addEventListener("blur", () => {
         window.visualViewport.removeEventListener("resize", adjustForKeyboard);
-        // 원래 자리로 복귀
         chatContainer.style.position = "static";
         chatContainer.style.bottom = "auto";
         chatContainer.style.width = "100%";
@@ -205,16 +211,14 @@
         const windowHeight = window.innerHeight;
 
         if (viewportHeight < windowHeight) {
-          // 키보드 올라온 상태 → 채팅 박스를 fixed로 전환
           chatContainer.style.position = "fixed";
-          chatContainer.style.bottom = "0px"; // 키보드 위
+          chatContainer.style.bottom = "0px";
           chatContainer.style.left = "0";
           chatContainer.style.right = "0";
           chatContainer.style.width = "100%";
           chatContainer.style.margin = "0";
           chatContainer.style.zIndex = "2000";
         } else {
-          // 키보드 내려옴 → 원래 자리
           chatContainer.style.position = "static";
           chatContainer.style.bottom = "auto";
           chatContainer.style.width = "100%";
