--- a/live/index.html
+++ b/live/index.html
@@ -4,18 +4,23 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>무료슬롯 - 최신 온라인 슬롯 게임 모음</title>
-
-  <!-- CSS -->
   <link href="./templatemo-glossy-touch.css" rel="stylesheet"/>
 
   <style>
+    body {
+      margin: 0;
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+    }
+
+    /* 홈 3개 */
     .features {
       display: grid;
-      grid-template-columns: repeat(3, 1fr) !important;
+      grid-template-columns: repeat(3, 1fr);
       gap: 10px;
       max-width: 1300px;
       margin: 30px auto;
-      padding: 0px 0;
       text-align: center;
     }
     .features .feature-card {
@@ -27,216 +32,126 @@
       position: relative;
     }
 
-    /* 방송 플레이어 */
-    .player-sticky {
-      width: 50%;
+    /* 방송 영역 */
+    .player-wrapper {
+      position: relative;
       max-width: 1300px;
-      margin: 10px auto;
-      aspect-ratio: 16 / 9;
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      overflow: hidden;
-      border-radius: 12px;
-      background: #000;
+      margin: 0 auto;
     }
     .player-sticky iframe {
       width: 100%;
-      height: 100%;
-      transform: translate(0%, 0%);
+      aspect-ratio: 16/9;
       border: none;
+      border-radius: 12px;
     }
 
-    /* 모바일 대응 */
+    /* === 모바일 전용 === */
     @media (max-width: 768px) {
+      /* 기본 방송 풀화면 */
       .player-sticky {
-        width: 100%;
-        margin: 0;
-        border-radius: 0;
-        aspect-ratio: auto;       /* ✅ 비율 강제 해제 */
-        height: auto;
+        position: relative;
+        z-index: 100;
       }
       .player-sticky iframe {
         width: 100%;
-        height: auto;             /* ✅ 높이 자동 */
-        min-height: 220px;        /* ✅ 최소 높이 확보 (필요시 조정) */
+        height: auto;
+        min-height: 220px;
         border-radius: 0;
       }
+
+      /* 미니 플레이어 모드 */
+      .player-sticky.mini {
+        position: fixed;
+        width: 160px;
+        height: 90px;
+        bottom: 10px;
+        right: 10px;
+        z-index: 2000;
+        border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+      }
+      .player-sticky.mini iframe {
+        width: 100%;
+        height: 100%;
+        min-height: auto;
+        border-radius: 0;
+      }
+
+      /* 채팅은 모바일에서는 풀모드일 때만 */
+      #chat-container {
+        background: #111;
+        border-top: 2px solid #333;
+        padding: 6px;
+      }
+      #chat-container.hidden {
+        display: none;
+      }
+      #chat-messages {
+        max-height: 200px;
+        overflow-y: auto;
+        font-size: 14px;
+        margin-bottom: 6px;
+      }
+      #chat-input-area {
+        display: flex;
+        align-items: center;
+      }
+      #chat-input {
+        flex: 1;
+        padding: 8px;
+        border-radius: 6px;
+        border: none;
+        outline: none;
+        font-size: 15px;
+      }
+      #send-btn {
+        margin-left: 6px;
+        padding: 8px 12px;
+        border-radius: 6px;
+        border: none;
+        background: #28a745;
+        color: white;
+      }
     }
-
-    /* 채팅 UI */
-    #chat-container {
-      max-width: 650px;
-      margin: 20px auto;
-      background: #222;
-      border: 2px solid #0f0;
-      border-radius: 12px;
-      padding: 10px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      height: 400px;
-    }
-    #chat-messages {
-      flex: 1;
-      overflow-y: auto;
-      padding: 5px;
-      border-bottom: 1px solid #333;
-      margin-bottom: 10px;
-      font-size: 16px;
-    }
-    #chat-input {
-      flex: 1;
-      padding: 8px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      font-size: 16px;   /* ✅ 모바일 확대 방지 */
-    }
-    #chat-container button {
-      padding: 8px 15px;
-      margin-left: 5px;
-      border-radius: 8px;
-      border: none;
-      background: #28a745;
-      color: white;
-      cursor: pointer;
-    }
-  
-/* === 모바일 방송 플레이어: 홈3박스 아래에서 sticky, 채팅창은 아래 === */
-@media (max-width: 768px) {
-  #homeSection {
-    position: relative;
-    z-index: 1001; /* 홈 박스 위로 */
-  }
-
-  .player-sticky {
-    position: sticky;   /* fixed 대신 sticky */
-    top: 0;
-    width: 100% !important;
-    margin: 0;
-    border-radius: 0;
-    z-index: 1000;
-    background: #000;
-  }
-
-  .player-sticky iframe {
-    width: 100%;
-    height: auto;
-    min-height: 220px;
-  }
-
-  #chat-container {
-    margin-top: 10px;   /* 방송 플레이어 바로 아래 */
-    height: 300px !important;
-    max-height: 40vh;
-  }
-
-  #chat-messages {
-    flex: 1;
-    overflow-y: auto;
-  }
-
-  input, textarea {
-    font-size: 16px !important; /* iOS 확대 방지 */
-  }
-}
-
-
-#chat-input-area {
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  border-top: 1px solid #333;
-  background: #111;
-}
-#change-name-btn {
-  flex: 0 0 36px;
-  height: 36px;
-  margin-right: 6px;
-  background: #444;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 18px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#change-name-btn:active { transform: scale(0.95); }
-#chat-input {
-  flex: 1;
-  padding: 10px;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  font-size: 16px;
-}
-#send-btn {
-  flex: 0 0 auto;
-  margin-left: 6px;
-  padding: 10px 15px;
-  border-radius: 8px;
-  border: none;
-  background: #28a745;
-  color: white;
-}
-
-</style>
+  </style>
 </head>
-
 <body>
+
   <!-- 홈 3개 -->
-  <section class="features first-features" id="homeSection">
+  <section class="features" id="homeSection">
     <div>
-      <a href="https://tssuolo.github.io/slot/live/index.html">
+      <a href="#">
         <div class="feature-card glass" style="background-image: url('./images/spinning-youtube.gif');"></div>
       </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
+      <div style="margin-top: 8px; font-size: 20px; font-weight: bold;">생방송</div>
     </div>
     <div>
-      <a href="https://tssuolo.github.io/slot/index.html">
+      <a href="#">
         <div class="feature-card glass" style="background-image: url('./images/olim.gif');"></div>
       </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
+      <div style="margin-top: 8px; font-size: 20px; font-weight: bold;">HOME</div>
     </div>
     <div>
-      <a href="https://t.me/ARSLOT7" target="_blank">
-        <div class="feature-card glass" style="background-image: url('./images/tltl.gif'); background-size: contain; background-repeat: no-repeat;
-                        background-position: center; width: 250px; height: 150px; border-radius: 15px; overflow: hidden; position: relative;"></div>
+      <a href="#">
+        <div class="feature-card glass" style="background-image: url('./images/tltl.gif'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 250px; height: 150px; border-radius: 15px;"></div>
       </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">가다호출</div>
+      <div style="margin-top: 8px; font-size: 20px; font-weight: bold;">가다호출</div>
     </div>
   </section>
 
-  <!-- 방송 플레이어 -->
-  <div class="player-sticky">
-    <iframe 
-      src="https://player.kick.com/3333slot?muted=true&autoplay=true" 
-      allowfullscreen>
-    </iframe>
-  </div>
-
-  <!-- Firebase 실시간 채팅 -->
-  <div id="chat-container">
-    <div id="chat-messages"></div>
-    
-<div style="display:flex; margin-top:8px; align-items:center;">
-  <!-- 닉네임 변경 버튼 -->
-  <button id="change-name-btn" title="닉네임 변경" 
-          style="margin-right:6px; width:36px; height:36px; border:none; border-radius:8px; background:#444; color:#fff; font-size:18px; cursor:pointer;">
-    ⚙️
-  </button>
-
-  <!-- 채팅 입력창 -->
-  <input id="chat-input" placeholder="메시지를 입력하세요..." style="flex:1; padding:8px; border-radius:8px; border:none; outline:none; font-size:16px;"/>
-
-  <!-- 전송 버튼 -->
-  <button onclick="sendMessage()">전송</button>
-</div>
-
+  <!-- 방송 + 채팅 -->
+  <div class="player-wrapper">
+    <div class="player-sticky" id="playerBox">
+      <iframe src="https://player.kick.com/3333slot?muted=true&autoplay=true" allowfullscreen></iframe>
+    </div>
+    <div id="chat-container">
+      <div id="chat-messages"></div>
+      <div id="chat-input-area">
+        <input id="chat-input" placeholder="메시지를 입력하세요..."/>
+        <button id="send-btn" onclick="sendMessage()">전송</button>
+      </div>
+    </div>
   </div>
 
   <script type="module">
@@ -258,38 +173,7 @@
 
     const currentUser = { name: "손님" + Math.floor(Math.random()*1000), role: "user" };
 
-
-// ✅ 닉네임 변경 버튼 기능
-(function(){
-  try {
-    const savedName = localStorage.getItem("chat_name");
-    if (savedName && typeof currentUser === "object") {
-      currentUser.name = savedName;
-    }
-    const btn = document.getElementById("change-name-btn");
-    if (btn) {
-      btn.addEventListener("click", () => {
-        const newName = prompt("새 닉네임을 입력하세요:", currentUser && currentUser.name ? currentUser.name : "");
-        if (newName && newName.trim()) {
-          const trimmed = newName.trim();
-          // ✅ 전체 글자수 제한 (한글/영문/숫자 합산)
-          if (trimmed.length >= 9) {
-            alert("닉네임은 8자만 가능합니다.");
-            return;
-          }
-          currentUser.name = trimmed;
-          localStorage.setItem("chat_name", currentUser.name);
-          alert("닉네임이 '" + currentUser.name + "' 으로 변경되었습니다.");
-        }
-      });}
-  } catch(e){ console.warn("닉네임 변경 오류", e); }
-})();
-
-
-
-
-
-
+    // 메시지 전송
     window.sendMessage = function() {
       const input = document.getElementById("chat-input");
       if (!input.value.trim()) return;
@@ -302,29 +186,39 @@
       input.value = "";
     }
 
+    // 메시지 수신
     onChildAdded(ref(db, "chat"), (snapshot) => {
       const data = snapshot.val();
       const msgBox = document.getElementById("chat-messages");
       const div = document.createElement("div");
-
-      let roleTag = "";
-      if (data.role === "admin") roleTag = "<span style='color:red;font-weight:bold;'>[관리자]</span> ";
-      if (data.role === "manager") roleTag = "<span style='color:orange;font-weight:bold;'>[매니저]</span> ";
-
-      div.innerHTML = roleTag + "<b>" + data.name + "</b>: " + data.text;
+      div.textContent = data.name + ": " + data.text;
       msgBox.appendChild(div);
       msgBox.scrollTop = msgBox.scrollHeight;
     });
-  
 
-// 채팅 엔터 전송 (Shift+Enter 줄바꿈)
-document.getElementById("chat-input").addEventListener("keydown", function(e) {
-  if (e.key === "Enter" && !e.shiftKey) {
-    e.preventDefault();
-    sendMessage();
-  }
-});
+    // 엔터 전송
+    document.getElementById("chat-input").addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        sendMessage();
+      }
+    });
 
-</script>
+    // 모바일에서 스크롤 이벤트 → 미니플레이어 토글
+    const playerBox = document.getElementById("playerBox");
+    const chatContainer = document.getElementById("chat-container");
+
+    window.addEventListener("scroll", () => {
+      if (window.innerWidth <= 768) {
+        if (window.scrollY > 200) {
+          playerBox.classList.add("mini");    // 미니 플레이어
+          chatContainer.classList.add("hidden"); // 채팅 숨김
+        } else {
+          playerBox.classList.remove("mini"); // 풀모드
+          chatContainer.classList.remove("hidden"); 
+        }
+      }
+    });
+  </script>
 </body>
 </html>
