--- a/live/index.html
+++ b/live/index.html
@@ -5,193 +5,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>무료슬롯 - 최신 온라인 슬롯 게임 모음</title>
 
-  <!-- CSS -->
   <link href="./templatemo-glossy-touch.css" rel="stylesheet"/>
 
   <style>
-    body {
-      margin: 0;
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
-    }
+    body { margin:0; background:#000; color:#fff; font-family:sans-serif; }
 
+    /* 홈 3박스 */
     .features {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr) !important;
-      gap: 10px;
-      max-width: 1300px;
-      margin: 30px auto;
-      text-align: center;
+      display:grid;
+      grid-template-columns:repeat(3,1fr);
+      gap:10px;
+      max-width:1300px;
+      margin:30px auto;
+      text-align:center;
     }
     .features .feature-card {
-      width: 100%;
-      aspect-ratio: 16 / 9;
-      border-radius: 15px;
-      background-size: cover;
-      background-position: center;
-      position: relative;
+      width:100%;
+      aspect-ratio:16/9;
+      border-radius:15px;
+      background-size:cover;
+      background-position:center;
+      position:relative;
     }
 
-    /* === PC 방송 플레이어 (50%) === */
+    /* 방송 플레이어 (PC 그대로 50%) */
     .player-sticky {
-      width: 50%;
-      max-width: 1300px;
-      margin: 10px auto;
-      aspect-ratio: 16 / 9;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      overflow: hidden;
-      border-radius: 12px;
-      background: #000;
+      width:50%;
+      max-width:1300px;
+      margin:10px auto;
+      aspect-ratio:16/9;
+      position:sticky;
+      top:0;
+      z-index:999;
+      border-radius:12px;
+      background:#000;
     }
-    .player-sticky iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+    .player-sticky iframe { width:100%; height:100%; border:none; }
 
-    /* === 채팅 UI === */
+    /* 채팅창 (PC 그대로 400px) */
     #chat-container {
-      max-width: 650px;
-      margin: 20px auto;
-      background: #222;
-      border: 2px solid #0f0;
-      border-radius: 12px;
-      padding: 10px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      height: 320px;   /* ✅ 기존 400px → 20% 줄임 */
-      z-index: 2001;   /* ✅ 방송보다 위 */
-      position: relative;
+      max-width:650px;
+      margin:20px auto;
+      background:#222;
+      border:2px solid #0f0;
+      border-radius:12px;
+      padding:10px;
+      color:white;
+      display:flex;
+      flex-direction:column;
+      height:400px;  /* ✅ PC에서는 그대로 400px 유지 */
+      position:relative;
+      z-index:2001;
     }
     #chat-messages {
-      flex: 1;
-      overflow-y: auto;
-      padding: 5px;
-      border-bottom: 1px solid #333;
-      margin-bottom: 10px;
-      font-size: 16px;
+      flex:1;
+      overflow-y:auto;
+      padding:5px;
+      border-bottom:1px solid #333;
+      margin-bottom:10px;
+      font-size:16px;
     }
-
     #chat-input-area {
-      display: flex;
-      align-items: center;
-      padding: 8px;
-      border-top: 1px solid #333;
-      background: #111;
+      display:flex; align-items:center;
+      padding:8px;
+      border-top:1px solid #333;
+      background:#111;
     }
     #change-name-btn {
-      flex: 0 0 36px;
-      height: 36px;
-      margin-right: 6px;
-      background: #444;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      flex:0 0 36px;
+      height:36px; margin-right:6px;
+      background:#444; color:#fff;
+      border:none; border-radius:8px;
+      font-size:18px; cursor:pointer;
+      display:flex; align-items:center; justify-content:center;
     }
-    #change-name-btn:active { transform: scale(0.95); }
-    #chat-input {
-      flex: 1;
-      padding: 10px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-    #send-btn {
-      flex: 0 0 auto;
-      margin-left: 6px;
-      padding: 10px 15px;
-      border-radius: 8px;
-      border: none;
-      background: #28a745;
-      color: white;
-    }
+    #chat-input { flex:1; padding:10px; border-radius:8px; border:none; outline:none; font-size:16px; }
+    #send-btn { flex:0 0 auto; margin-left:6px; padding:10px 15px; border-radius:8px; border:none; background:#28a745; color:#fff; }
 
-    /* === 모바일 전용 === */
-    @media (max-width: 768px) {
+    /* 모바일 전용 */
+    @media (max-width:768px) {
       .player-sticky {
-        width: 100%;
-        margin: 0;
-        border-radius: 0;
-        position: relative;
+        width:100%; margin:0; border-radius:0; position:relative; z-index:10;
       }
-      .player-sticky iframe {
-        width: 100%;
-        height: auto;
-        min-height: 220px;
-      }
+      .player-sticky iframe { width:100%; height:auto; min-height:220px; }
 
-      /* 스크롤 내릴 때 하단 꽉차기 */
+      /* 방송 하단 고정 모드 */
       .player-sticky.bottom {
-        position: fixed;
-        left: 0; right: 0; bottom: 0;
-        width: 100%;
-        height: 35vh; /* 하단 높이 */
-        z-index: 1000; /* ✅ 채팅보다 뒤 */
-        border-radius: 0;
+        position:fixed; bottom:0; left:0; right:0;
+        width:100%; height:35vh; z-index:5; border-radius:0;
       }
-      .player-sticky.bottom iframe {
-        width: 100%;
-        height: 100%;
-      }
+      .player-sticky.bottom iframe { width:100%; height:100%; }
+
+      /* 모바일에서만 채팅창 높이 줄이기 */
+      #chat-container { height:320px; }
 
       /* 채팅 숨김 */
-      #chat-container.hidden {
-        display: none !important;
-      }
+      #chat-container.hidden { display:none !important; }
     }
   </style>
 </head>
 
 <body>
-  <!-- 홈 3개 -->
-  <section class="features first-features" id="homeSection">
+  <!-- 홈 3박스 -->
+  <section class="features" id="homeSection">
     <div>
-      <a href="https://tssuolo.github.io/slot/live/index.html">
-        <div class="feature-card glass" style="background-image: url('./images/spinning-youtube.gif');"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">생방송</div>
+      <a href="#"><div class="feature-card glass" style="background-image:url('./images/spinning-youtube.gif');"></div></a>
+      <div style="margin-top:8px; font-size:20px; font-weight:bold;">생방송</div>
     </div>
     <div>
-      <a href="https://tssuolo.github.io/slot/index.html">
-        <div class="feature-card glass" style="background-image: url('./images/olim.gif');"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">HOME</div>
+      <a href="#"><div class="feature-card glass" style="background-image:url('./images/olim.gif');"></div></a>
+      <div style="margin-top:8px; font-size:20px; font-weight:bold;">HOME</div>
     </div>
     <div>
-      <a href="https://t.me/ARSLOT7" target="_blank">
-        <div class="feature-card glass" style="background-image: url('./images/tltl.gif'); background-size: contain; background-repeat: no-repeat;
-                        background-position: center; width: 250px; height: 150px; border-radius: 15px; overflow: hidden; position: relative;"></div>
-      </a>
-      <div style="margin-top: 8px; font-size: 20px; font-weight: bold; color: white;">가다호출</div>
+      <a href="#"><div class="feature-card glass" style="background-image:url('./images/tltl.gif'); background-size:contain; background-repeat:no-repeat; background-position:center; width:250px; height:150px; border-radius:15px;"></div></a>
+      <div style="margin-top:8px; font-size:20px; font-weight:bold;">가다호출</div>
     </div>
   </section>
 
-  <!-- 방송 플레이어 -->
+  <!-- 방송 -->
   <div class="player-sticky" id="playerBox">
-    <iframe 
-      src="https://player.kick.com/3333slot?muted=true&autoplay=true" 
-      allowfullscreen>
-    </iframe>
+    <iframe src="https://player.kick.com/3333slot?muted=true&autoplay=true" allowfullscreen></iframe>
   </div>
 
-  <!-- Firebase 실시간 채팅 -->
+  <!-- 채팅 -->
   <div id="chat-container">
     <div id="chat-messages"></div>
     <div id="chat-input-area">
-      <!-- 닉네임 변경 버튼 -->
       <button id="change-name-btn" title="닉네임 변경">⚙️</button>
-
-      <!-- 입력창 -->
       <input id="chat-input" placeholder="메시지를 입력하세요..."/>
       <button id="send-btn" onclick="sendMessage()">전송</button>
     </div>
@@ -210,86 +150,58 @@
       messagingSenderId: "1234567890",
       appId: "1:1234567890:web:abcdef1234567890"
     };
-
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    const currentUser = { name: "손님" + Math.floor(Math.random()*1000), role: "user" };
+    const currentUser = { name: "손님" + Math.floor(Math.random()*1000), role:"user" };
 
-    // ✅ 닉네임 변경 버튼 기능
-    (function(){
-      try {
-        const savedName = localStorage.getItem("chat_name");
-        if (savedName && typeof currentUser === "object") {
-          currentUser.name = savedName;
-        }
-        const btn = document.getElementById("change-name-btn");
-        if (btn) {
-          btn.addEventListener("click", () => {
-            const newName = prompt("새 닉네임을 입력하세요:", currentUser && currentUser.name ? currentUser.name : "");
-            if (newName && newName.trim()) {
-              const trimmed = newName.trim();
-              if (trimmed.length >= 9) {  // ✅ 8자 제한
-                alert("닉네임은 8자만 가능합니다.");
-                return;
-              }
-              currentUser.name = trimmed;
-              localStorage.setItem("chat_name", currentUser.name);
-              alert("닉네임이 '" + currentUser.name + "' 으로 변경되었습니다.");
-            }
-          });
-        }
-      } catch(e){ console.warn("닉네임 변경 오류", e); }
-    })();
-
-    // 메시지 전송
-    window.sendMessage = function() {
-      const input = document.getElementById("chat-input");
-      if (!input.value.trim()) return;
-      push(ref(db, "chat"), {
-        name: currentUser.name,
-        role: currentUser.role,
-        text: input.value,
-        time: Date.now()
-      });
-      input.value = "";
-    }
-
-    // 메시지 수신
-    onChildAdded(ref(db, "chat"), (snapshot) => {
-      const data = snapshot.val();
-      const msgBox = document.getElementById("chat-messages");
-      const div = document.createElement("div");
-
-      let roleTag = "";
-      if (data.role === "admin") roleTag = "<span style='color:red;font-weight:bold;'>[관리자]</span> ";
-      if (data.role === "manager") roleTag = "<span style='color:orange;font-weight:bold;'>[매니저]</span> ";
-
-      div.innerHTML = roleTag + "<b>" + data.name + "</b>: " + data.text;
-      msgBox.appendChild(div);
-      msgBox.scrollTop = msgBox.scrollHeight;
-    });
-
-    // 채팅 엔터 전송 (Shift+Enter 줄바꿈)
-    document.getElementById("chat-input").addEventListener("keydown", function(e) {
-      if (e.key === "Enter" && !e.shiftKey) {
-        e.preventDefault();
-        sendMessage();
+    // 닉네임 변경
+    const savedName = localStorage.getItem("chat_name");
+    if(savedName) currentUser.name = savedName;
+    document.getElementById("change-name-btn").addEventListener("click", ()=>{
+      const newName = prompt("새 닉네임:", currentUser.name);
+      if(newName && newName.trim()){
+        const t = newName.trim();
+        if(t.length >= 9){ alert("닉네임은 8자만 가능합니다."); return; }
+        currentUser.name = t;
+        localStorage.setItem("chat_name", currentUser.name);
+        alert("닉네임이 '"+currentUser.name+"' 으로 변경되었습니다.");
       }
     });
 
-    // ✅ 모바일 전용: 스크롤 이벤트로 방송/채팅 토글
-    const playerBox = document.getElementById("playerBox");
-    const chatContainer = document.getElementById("chat-container");
+    // 메시지 전송
+    window.sendMessage = function(){
+      const input = document.getElementById("chat-input");
+      if(!input.value.trim()) return;
+      push(ref(db,"chat"), { name:currentUser.name, role:currentUser.role, text:input.value, time:Date.now() });
+      input.value="";
+    }
+    onChildAdded(ref(db,"chat"), snap=>{
+      const d = snap.val();
+      const msgBox=document.getElementById("chat-messages");
+      const div=document.createElement("div");
+      let roleTag="";
+      if(d.role==="admin") roleTag="<span style='color:red;font-weight:bold;'>[관리자]</span> ";
+      if(d.role==="manager") roleTag="<span style='color:orange;font-weight:bold;'>[매니저]</span> ";
+      div.innerHTML = roleTag+"<b>"+d.name+"</b>: "+d.text;
+      msgBox.appendChild(div);
+      msgBox.scrollTop=msgBox.scrollHeight;
+    });
+    document.getElementById("chat-input").addEventListener("keydown", e=>{
+      if(e.key==="Enter" && !e.shiftKey){ e.preventDefault(); sendMessage(); }
+    });
 
-    window.addEventListener("scroll", () => {
-      if (window.innerWidth <= 768) {
-        if (window.scrollY > 200) {
-          playerBox.classList.add("bottom");   // 방송 하단 고정
-          chatContainer.classList.add("hidden"); // 채팅 숨김
-        } else {
-          playerBox.classList.remove("bottom"); // 방송 원위치
-          chatContainer.classList.remove("hidden"); // 채팅 보임
+    // 모바일 스크롤 시
+    const playerBox=document.getElementById("playerBox");
+    const chatBox=document.getElementById("chat-container");
+    window.addEventListener("scroll", ()=>{
+      if(window.innerWidth<=768){
+        if(window.scrollY>200){
+          playerBox.classList.add("bottom");
+          chatBox.classList.add("hidden");
+        }else{
+          playerBox.classList.remove("bottom");
+          chatBox.classList.remove("hidden");
         }
       }
     });
