--- a/index.html
+++ b/index.html
@@ -2550,7 +2550,7 @@
       
       <a href="https://demogamesfree-asia.pragmaticplay.net/gs2c/openGame.do?gameSymbol=vswayshammthor&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99&lobby_url=https%3A%2F%2Fwww.pragmaticplay.com%2Fko%2F&lang=KO&cur=KRW" target="_blank" style="text-decoration:none;">
         <div class="feature-card glass"
-             style="background-image: url('images/파워 오브 토르 메가웨이즈.png'); 
+             style="background-image: url('images/pof.png'); 
                     background-size: cover; 
                     background-position: center; 
                     width: 550px; 
